package io.marmer.github.demo.novatecsummit2023demo.domain;

public enum Betreuungsumfang {
  GANZTAGS, TEILZEIT, GANZTAGS7, GANZTAGS9
}
